--- a/updated_wifi.py.save.2
+++ b/updated_wifi.py.save.2
@@ -176,14 +176,13 @@ def reset():
 
 @app.route('/speed_test')
 def speed_test():
-	result = subprocess.check_output(['sudo','speedtest-cli','--share'])
+	result = subprocess.check_output(['speedtest-cli','--share'])
 	result = result.decode('utf-8')
 	m = re.search(r'http[s]?://[^\s]+',result)
 	if m:
-		link = m.group(0)
+		speedtest_link = m.group(0)
 	else:
-		link = None
-	return render_template('speed.html',link=link)
+		speedtest_link = 
 
 if __name__=='__main__':
 	app.run(host='0.0.0.0',port=5000,debug=True)
