--- a/updated_wifi.py.save.1
+++ b/updated_wifi.py.save.1
@@ -3,8 +3,7 @@ import subprocess
 import matplotlib.pyplot as plt
 from io import BytesIO
 import base64
-import os
-import re
+
 
 app = Flask(__name__)
 
@@ -80,20 +79,17 @@ def plot_function():
 	for ssid in grouped_networks:
 		x.append(ssid)
 		y.append(grouped_networks[ssid]['Signal Strength'][0])
-	plt.figure(figsize=(10,6))
-	plt.bar(x,y,color='blue')
-	font1 = {'family':'serif','color':'darkred','size':15}
-	font2 = {'family':'serif','color':'green','size':20}
-	#plt.title('Plot',fontdict=font2)
-	plt.xlabel('SSID Name',fontdict=font1)
-	plt.ylabel('Signal Strength(dbm)',fontdict=font1)
-	
-	plt.xticks(rotation=45,ha='right')
-	plt.tight_layout()
-	path = os.path.join('static','plot.png')
-	plt.savefig(path)
+	plt.scatter(x,y)
+	plt.title('Plot')
+	plt.xlabel('SSID')
+	plt.ylabel('Signal Strength')
+
+	img_stream = BytesIO()
+	plt.savefig(img_stream,format='png')
+	img_stream.seek(0)
+	img = base64.b64encode(img_stream.read().decode('utf-8'))
 	plt.close()
-	return render_template('plot.html',img=path)
+	return render_template('plot.html',
 
 @app.route('/connected_wifi')
 def connected_wifi():
@@ -174,16 +170,7 @@ def reset():
 	subprocess.check_output(['touch','blocked_signal.txt'])
 	return render_template('index.html',message = "All blocked wifi signlas have been successfully unblocked.")
 
-@app.route('/speed_test')
-def speed_test():
-	result = subprocess.check_output(['sudo','speedtest-cli','--share'])
-	result = result.decode('utf-8')
-	m = re.search(r'http[s]?://[^\s]+',result)
-	if m:
-		link = m.group(0)
-	else:
-		link = None
-	return render_template('speed.html',link=link)
+
 
 if __name__=='__main__':
 	app.run(host='0.0.0.0',port=5000,debug=True)
